--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@ layout: default
 <div class="border-main">
 </div>
  <div class="border-bk">
-<div class="banner-main" style="background:url(../../image/eshop/banner_bg.png) center top repeat;">
+<div class="banner-main" style="background:url({{site.baseurl}}/image/eshop/banner_bg.png) center top repeat;">
 
 <div class="container">
 <div class="row">
 
                     	<div class="banner-left">
 
-                        	<div class="left_img"><img src="image/left_img.png"></div>
+                        	<div class="left_img"><img src="{{site.baseurl}}/image/left_img.png"></div>
                         </div>
 
                 	<div class="col-lg-8 col-sm-8">
@@ -44,8 +44,8 @@ layout: default
         </div>
     </div>
     <div class="border-main"></div>
-    <div class="feature-banner-main" style=" background:url(../../image/eshop/patrn_2.png) center repeat;">
-    	<div class="feature-banner" style="background:url(../../image/eshop/feature_caption.png) center top repeat-x;">
+    <div class="feature-banner-main" style=" background:url({{site.baseurl}}/image/eshop/patrn_2.png) center repeat;">
+    	<div class="feature-banner" style="background:url({{site.baseurl}}/image/eshop/feature_caption.png) center top repeat-x;">
         	<div class="container">
             	<h2>All <span>"Bad Credit Auto Loans"</span> Situations Welcome!</h2>
 
