--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="border-main">
 </div>
  <div class="border-bk">
-<div class="banner-main" style="background:url({{site.baseurl}}/image/eshop/banner_bg.png) center top repeat;">
+<div class="banner-main" style="background:url({{site.baseurl}}/image/banner_bg.png) center top repeat;">
 
 <div class="container">
 <div class="row">
@@ -44,8 +44,8 @@ layout: default
         </div>
     </div>
     <div class="border-main"></div>
-    <div class="feature-banner-main" style=" background:url({{site.baseurl}}/image/eshop/patrn_2.png) center repeat;">
-    	<div class="feature-banner" style="background:url({{site.baseurl}}/image/eshop/feature_caption.png) center top repeat-x;">
+    <div class="feature-banner-main" style=" background:url({{site.baseurl}}/image/patrn_2.png) center repeat;">
+    	<div class="feature-banner" style="background:url({{site.baseurl}}/image/feature_caption.png) center top repeat-x;">
         	<div class="container">
             	<h2>All <span>"Bad Credit Auto Loans"</span> Situations Welcome!</h2>
 
